修改边缘限制逻辑

--- a/app/src/main/res/layout/activity_my_sticker.xml
+++ b/app/src/main/res/layout/activity_my_sticker.xml
@@ -21,8 +21,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:showBorder="false"
-        app:showIcons="false">
+        app:showBorder="true"
+        app:showIcons="true">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/haizewang_23"/>
+
 
     </com.xiaopo.flying.sticker.StickerView>
 
